chapter-07-kubernetes/default-deny-payroll.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: payroll
spec:
  podSelector: {}
  policyTypes:
    - Ingress
